[gd_scene load_steps=15 format=3 uid="uid://didi0yef811b7"]

[ext_resource type="Script" path="res://Scripts/Plant.gd" id="1_xwsdg"]
[ext_resource type="Shader" uid="uid://diia4yllqgg5i" path="res://Resources/sway.tres" id="2_ptl7n"]
[ext_resource type="Texture2D" uid="uid://cotkureitdbil" path="res://Assets/Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/Basic_Plants.png" id="2_vxcfr"]
[ext_resource type="Theme" uid="uid://qbg0e3ywphwg" path="res://Resources/theme.tres" id="3_a871s"]
[ext_resource type="PackedScene" uid="uid://dtdfcsventfuw" path="res://Scenes/berry_particle.tscn" id="4_b5dmi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hf2y"]
shader = ExtResource("2_ptl7n")
shader_parameter/Wind_Strength = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_s1pkv"]
atlas = ExtResource("2_vxcfr")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_awyh2"]
atlas = ExtResource("2_vxcfr")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k20yj"]
atlas = ExtResource("2_vxcfr")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j37k8"]
atlas = ExtResource("2_vxcfr")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfxve"]
atlas = ExtResource("2_vxcfr")
region = Rect2(80, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pv8vi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1pkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awyh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k20yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j37k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfxve")
}],
"loop": true,
"name": &"Grow",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1nah"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_npbmj"]

[node name="Berry" type="StaticBody2D" groups=["Berry", "Plants"]]
script = ExtResource("1_xwsdg")
max_frames = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_1hf2y")
sprite_frames = SubResource("SpriteFrames_pv8vi")
animation = &"Grow"

[node name="Interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
shape = SubResource("RectangleShape2D_u1nah")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_npbmj")

[node name="harvest_announce" type="Label" parent="."]
offset_left = -45.0
offset_top = -23.0
offset_right = 45.0
size_flags_horizontal = 4
theme = ExtResource("3_a871s")
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="particle" parent="." instance=ExtResource("4_b5dmi")]

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -7.0
offset_top = 4.0
offset_right = 86.0
offset_bottom = 31.0
scale = Vector2(0.15, 0.15)
step = 0.1
show_percentage = false

[connection signal="ready_to_harvest" from="." to="." method="_on_ready_to_harvest"]
[connection signal="body_entered" from="Interact" to="." method="_on_interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_interact_body_exited"]
[connection signal="input_event" from="Interact" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="PhaseTimer" to="." method="_on_phase_timer_timeout"]
